--- a/styles.css
+++ b/styles.css
@@ -3,8 +3,37 @@
     color: white;
     border: none;
     border-radius: 20px;
-    padding: 10px 15px
+    padding: 10px 15px;
+    height: 10px;
 
-    width
+    width: 60px;
+    margin-right: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
 
+    cursor: pointer;
+}
+
+
+.like-count {
+        background-color: rgba(0, 0, 0, 0);
+        border: none;
+        border-radius: 20px;
+        font-family: sans-serif;
+        font-size: 10px;
+        margin-left: 7.5px;
+}
+
+
+.td {
+    background-color: red;
+    color: white;
+    border: none;
+    border-radius: 20px; 
+    padding-right: 0px 0px;
+    margin-left: 9px;
+    display: flex;
+
+    cursor: pointer;
 }
