--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,20 @@
 .tu {
-    background-color: red;
+    background-color: rgba(68, 68, 68, 0.795);
     color: white;
     border: none;
     border-radius: 20px;
     padding: 10px 15px;
     height: 10px;
 
-    width: 60px;
+    width: 73px;
     margin-right: 10px;
+    margin-left: 1px; 
     display: flex;
     align-items: center;
     justify-content: flex-start;
+
+    font-size: 13px;
+
 
     cursor: pointer;
 }
@@ -20,20 +24,45 @@
         background-color: rgba(0, 0, 0, 0);
         border: none;
         border-radius: 20px;
+        margin-left: 7.2px;
+
         font-family: sans-serif;
         font-size: 10px;
-        margin-left: 7.5px;
 }
 
 
 .td {
-    background-color: red;
+    background-color: rgba(49, 49, 49, 0);
     color: white;
     border: none;
-    border-radius: 20px; 
+    border-radius: 20px;
+    
+    font-size: 14px;
+
     padding-right: 0px 0px;
-    margin-left: 9px;
+    margin-left: 7px;
     display: flex;
 
     cursor: pointer;
+} 
+
+
+.vid-stats {
+    background-color: None;
+        color: White; 
+        font-family: sans-serif;
+        font-weight: bold;
+        font-size: 9.65pt;
+        
+        display: flex;
+        margin-bottom: 8.2px;
+}
+
+.line-split {
+    background-color: none;
+    color: rgb(34, 34, 34);
+    font-size: 14px;
+    
+    display: flex;
+    margin-left: 12px;
 }
